RESOLVED FIXED83553
It should be possible to see why a code block was not compiled by the DFG
https://bugs.webkit.org/show_bug.cgi?id=83553
Summary It should be possible to see why a code block was not compiled by the DFG
Filip Pizlo
Reported 2012-04-10 00:54:45 PDT
Patch forthcoming.
Attachments
the patch (2.51 KB, patch)
2012-04-10 00:58 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2012-04-10 00:58:36 PDT
Created attachment 136410 [details] the patch
Geoffrey Garen
Comment 2 2012-04-10 08:29:54 PDT
Geoffrey Garen
Comment 3 2012-04-10 08:30:29 PDT
(In reply to comment #2) > <rdar://problem/11215848> Oops, pasted into wrong bug :(.
Geoffrey Garen
Comment 4 2012-04-10 08:31:04 PDT
Comment on attachment 136410 [details] the patch r=me
Filip Pizlo
Comment 5 2012-04-10 09:40:49 PDT
Note You need to log in before you can comment on or make changes to this bug.