It should be possible to see why a code block was not compiled by the DFG https://bugs.webkit.org/show_bug.cgi?id=83553

Reviewed by Geoff Garen.

If DFG_ENABLE(DEBUG_VERBOSE) and a code block is rejected, then print the
opcode that caused the rejection.

* dfg/DFGCapabilities.cpp:
(JSC::DFG::debugFail):
(DFG):
(JSC::DFG::canHandleOpcodes):



Canonical link: https://commits.webkit.org/101035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113726 268f45cc-cd09-0410-ab3c-d52691b4dbfc